[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://Sprites/coin.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Sprites/heart.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 32, 32 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="MarginContainer" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 60.0
margin_bottom = 48.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="CanvasLayer/GUI"]
margin_right = 60.0
margin_bottom = 16.0

[node name="CoinsContainer" type="HBoxContainer" parent="CanvasLayer/GUI/Container"]
margin_right = 28.0
margin_bottom = 16.0

[node name="Coins" type="Label" parent="CanvasLayer/GUI/Container/CoinsContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 15.0
text = "0"

[node name="Icon" type="TextureRect" parent="CanvasLayer/GUI/Container/CoinsContainer"]
margin_left = 12.0
margin_right = 28.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="LivesContainer" type="HBoxContainer" parent="CanvasLayer/GUI/Container"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 16.0

[node name="Lives" type="Label" parent="CanvasLayer/GUI/Container/LivesContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 15.0
text = "0"

[node name="Icon" type="TextureRect" parent="CanvasLayer/GUI/Container/LivesContainer"]
margin_left = 12.0
margin_right = 28.0
margin_bottom = 16.0
texture = ExtResource( 5 )
[connection signal="area_entered" from="Player" to="CanvasLayer/GUI" method="_on_Area2D_area_entered"]
